--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1080,3 +1080,93 @@ year = {2006}
   year={1998},
   publisher={IEEE}
 }
+
+@InProceedings{conf/isnn/HoangHVW07,
+  title =       "A Robust Online Sequential Extreme Learning Machine",
+  author =      "Minh-Tuan T. Hoang and Hieu Trung Huynh and Nguyen H.
+                 Vo and Yonggwan Won",
+  bibdate =     "2007-08-28",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/isnn/isnn2007-1.html#HoangHVW07",
+  booktitle =   "ISNN",
+  \booktitle =  "Advances in Neural Networks - {ISNN} 2007, 4th
+                 International Symposium on Neural Networks, {ISNN}
+                 2007, Nanjing, China, June 3-7, 2007, Proceedings, Part
+                 {I}",
+  \booktitle = "International Symposium on Neural Networks",
+  publisher =   "Springer",
+  year =        "2007",
+  volume =      "4491",
+  \editor =     "Derong Liu and Shumin Fei and Zeng-Guang Hou and
+                 Huaguang Zhang and Changyin Sun",
+  ISBN =        "978-3-540-72382-0",
+  pages =       "1077--1086",
+  series =      "Lecture Notes in Computer Science",
+  \URL =        "http://dx.doi.org/10.1007/978-3-540-72383-7_126",
+}
+
+@Article{journals/ijon/HuangC07,
+  title =       "Convex incremental extreme learning machine",
+  author =      "Guang-Bin Huang and Lei Chen",
+  journal =     "Neurocomputing",
+  year =        "2007",
+  number =      "16-18",
+  volume =      "70",
+  bibdate =     "2014-11-02",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijon/ijon70.html#HuangC07",
+  pages =       "3056--3062",
+  \URL =         "http://dx.doi.org/10.1016/j.neucom.2007.02.009",
+}
+
+@Article{journals/tnn/HuangCS06,
+  title =       "Universal approximation using incremental constructive
+                 feedforward networks with random hidden nodes",
+  author =      "Guang-Bin Huang and Lei Chen 0009 and Chee Kheong
+                 Siew",
+  journal =     "IEEE Transactions on Neural Networks",
+  year =        "2006",
+  number =      "4",
+  volume =      "17",
+  bibdate =     "2014-11-02",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/tnn/tnn17.html#HuangCS06",
+  pages =       "879--892",
+  \URL =         "http://doi.ieeecomputersociety.org/10.1109/TNN.2006.875977",
+}
+
+@InProceedings{conf/acivs/DemirkesenC08,
+  title =       "A Comparison of Multiclass {SVM} Methods for Real
+                 World Natural Scenes",
+  author =      "Can Demirkesen and Hocine Cherifi",
+  bibdate =     "2008-10-22",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/acivs/acivs2008.html#DemirkesenC08",
+  booktitle =   "ACIVS",
+  booktitle =   "Advanced Concepts for Intelligent Vision Systems, 10th
+                 International Conference, {ACIVS} 2008, Juan-les-Pins,
+                 France, October 20-24, 2008. Proceedings",
+  publisher =   "Springer",
+  year =        "2008",
+  volume =      "5259",
+  editor =      "Jacques Blanc-Talon and Salah Bourennane and Wilfried
+                 Philips and Dan C. Popescu and Paul Scheunders",
+  ISBN =        "978-3-540-88457-6",
+  pages =       "752--763",
+  series =      "Lecture Notes in Computer Science",
+  \URL =         "http://dx.doi.org/10.1007/978-3-540-88458-3_68",
+}
+
+@Article{journals/coling/EugenioG04,
+  title =       "The Kappa Statistic: {A} Second Look",
+  author =      "Barbara Di Eugenio and Michael Glass",
+  journal =     "Computational Linguistics",
+  year =        "2004",
+  number =      "1",
+  volume =      "30",
+  bibdate =     "2006-07-25",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/coling/coling30.html#EugenioG04",
+  pages =       "95--101",
+  URL =         "http://dx.doi.org/10.1162/089120104773633402",
+}
