--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -12,6 +12,8 @@ provavelm é colocando um atributo string.)}
 não tem uma estimativa de distribuição de probabilidade suave;
 isso afeta a medida de incerteza;
 ao menos NB e 5NN devem ter esse problema;
+É fato que o algoritmo NB produz estimativas de distribuição de probabilidade
+excessivamente confiantes \citep{conf/icml/RoyM01}.
 posso calcular a entropia média da saída de cada classif para cada base em todos os exemplos
 e fazer uma tabela com a ultima linha sendo a media de todas as bases}
 
