--- a/experimentos.tex
+++ b/experimentos.tex
@@ -1,13 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Experimentos e Resultados}\label{experimentos}
-\ano{para evitar separar as subdescricoes do experimento de seus subresultados,
-essa seção apenas dá um overview explicando o porquê da escolha de cada
-experimento:
-... árvore ...
-fazer para cada learner uma tabela de intersecções de metaexemplos
-(obviamente com empates);
-AG,LU vs DWTU;
-metaap pra decidir entre AG, LU ou TU}
+AG,LU vs DWTU
 
 \input exp-analise
 
