--- a/introducao.tex
+++ b/introducao.tex
@@ -1,5 +1,8 @@
 \chapter{Introdução} \label{cap:intro}
-\esb{Andre+Davi: apresenta o custo de rotulação como motivação;
+\citep{journals/jmlr/GuyonCDL11} tem o gráfico mostrando muita gente usando unc sampling
+e ninguém(?) usando DWTU
+
+\esb{apresenta o custo de rotulação como motivação;
 explicita que ninguém compara estratégias; comenta possiveis deficiencias ou
 lacunas das estrategias existentes, apresenta melhorias propostas; apresenta
 recomendação de classificador e/ou estratégia; apresenta hipóteses principal e secundárias.
