--- a/meta.tex
+++ b/meta.tex
@@ -18,3 +18,11 @@ budget e aprendiz dados [e qtd inicial de rótulos?]}
 \ano{recomendação de aprendiz
 (NB,C45,etc. e ''não-use essa estrat.'' ou ''use aleatório'')
 para uma dada estratégia}
+
+\tar{metaap pra decidir entre AG, LU ou TU}
+
+\tar{carac. dos classifs como metafeature:
+\begin{itemize}
+ \item sharp ou soft (alternativa: entropia média das predições)
+\end{itemize}
+}
