--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -11,11 +11,18 @@ provavelm é colocando um atributo string.)}
 \esb{provavelmente o classificador atrapalha quando ele
 não tem uma estimativa de distribuição de probabilidade suave;
 isso afeta a medida de incerteza;
-ao menos NB e 5NN devem ter esse problema;
+ao menos NB e 5NN devem ter esse problema;}
+
+\esb{
 É fato que o algoritmo NB produz estimativas de distribuição de probabilidade
 excessivamente confiantes \citep{conf/icml/RoyM01}.
 posso calcular a entropia média da saída de cada classif para cada base em todos os exemplos
 e fazer uma tabela com a ultima linha sendo a media de todas as bases}
+
+\esb{When Does Active Learning Work?
+confirma que atributos não-discretizados favorecem AL, isso justifica z-score para qq classificador ? (ao menos RF, SVM, log reg. e QDA usados no artigo).
+usa apenas QBC, entropia e random.
+}
 
 \ano{dizer em algum lugar que demonstra a Viabilidade do Aprendizado Ativo}
 
