--- a/experimentos.tex
+++ b/experimentos.tex
@@ -2,6 +2,8 @@
 \chapter{Experimentos e Resultados}\label{experimentos}
 AG,LU vs DWTU
 
+\tar{há alguma correlação entre desempenho de AL e desbalanceamento da base?}
+
 \input exp-analise
 
 
